--- a/css/MainPage.css
+++ b/css/MainPage.css
@@ -8,11 +8,9 @@ nav {
     height: 40vh;
     line-height: 40vh;
   }
-  html {
-    background:url(fond-metro.jpg) repeat ;
-    -webkit-background-size: auto; 
-    -moz-background-size: auto; 
-    -ms-background-size: auto; 
-    -o-background-size: auto; 
-    background-size: auto;
+  body {
+    color:black;
+    background-color:white;
+    background-image:url(fond-metro.jpg);
+    background-repeat:repeat;
     }
