--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4267,9 +4267,9 @@ nav .button-collapse i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: rgb(255, 242, 66);
   display: inline-block;
-  font-size: 2.1rem;
+  font-size: 3rem;
   padding: 0;
 }
 
@@ -5939,7 +5939,7 @@ button.btn-floating {
 .materialbox-caption {
   position: fixed;
   display: none;
-  color: #fff;
+  color: rgb(255, 251, 0);
   line-height: 50px;
   bottom: 0;
   left: 0;
@@ -7225,7 +7225,7 @@ input[type=range] {
 
 input[type=range]::-webkit-slider-runnable-track {
   height: 3px;
-  background: #c2c0c2;
+  background: #ffffff;
   border: none;
 }
 
@@ -7244,7 +7244,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #ccc;
+  background: rgb(255, 255, 255);
 }
 
 input[type=range] {
@@ -8115,7 +8115,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .slider .slides {
-  background-color: #9e9e9e;
+  background-color: #fdc200;
   margin: 0;
   height: 400px;
 }
@@ -8139,7 +8139,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .slider .slides li .caption {
-  color: #fff;
+  color: rgb(255, 0, 0);
   position: absolute;
   top: 15%;
   left: 15%;
@@ -8148,7 +8148,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .slider .slides li .caption p {
-  color: #e0e0e0;
+  color: rgb(255, 0, 0);
 }
 
 .slider .slides li.active {
@@ -8171,7 +8171,7 @@ input[type=range]:focus::-ms-fill-upper {
   height: 16px;
   width: 16px;
   margin: 0 12px;
-  background-color: #e0e0e0;
+  background-color: #ffffff;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
   border-radius: 50%;
@@ -9459,4 +9459,7 @@ footer {
   width: 100%;
   height: 40vh;
   line-height: 40vh;
+}
+.navbar-material .nav-wrapper .brand-logo text {
+  height: 64px;
 }
