--- a/css/PresentationRegion.css
+++ b/css/PresentationRegion.css
@@ -15,4 +15,18 @@ nav {
     background-repeat:no-repeat;
     background-size:cover;
     }
+    iframe{
+    display: block;
+    width:"800";
+    height:"400";
+    margin-left: auto;
+    margin-right: auto
+    
+}
+#all{
+    width:100%;
+    float:left;
+    text-align:center;
+}
+   
  
